name:                pure-grid
version:             0.8.0.0
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-grid.git

library
  build-depends:
    base,
    pure,
    pure-cond,
    pure-prop,
    pure-css,
    pure-theme,
    pure-styles,
    pure-txt,
    hashable
  exposed-modules: 
    Pure.Grid
    Pure.Grid.Theme
  hs-source-dirs:      src
  default-language:    Haskell2010
